--- a/src/assets/sass/now-ui-kit/mixins/_navbar.scss
+++ b/src/assets/sass/now-ui-kit/mixins/_navbar.scss
@@ -4,18 +4,18 @@
     display: block !important;
     top: 0;
     height: 100% !important;
-    width: 300px;
+    width: 150px;
     right: 0;
     z-index: 1032;
     visibility: visible;
-    background-color: #999;
+    background-color: #222;
     overflow-y: visible;
     border-top: none;
     text-align: left;
 
     max-height: none !important;
 
-    @include transform-translate-x(300px);
+    @include transform-translate-x(150px);
     @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
     &:after {
@@ -70,7 +70,7 @@
     .menu-on-left & {
       right: auto;
       left: 0;
-      @include transform-translate-x(-300px);
+      @include transform-translate-x(-170px);
     }
   }
 
@@ -149,7 +149,7 @@
     .navbar-toggler-bar {
       display: block;
       position: relative;
-      width: 22px;
+      width: 32px;
       height: 1px;
       border-radius: 1px;
       background: $white-bg;
@@ -165,11 +165,11 @@
     }
 
     &.bg-white:not(.navbar-transparent) .navbar-toggler-bar {
-      background: $default-color;
+      background: #222222;
     }
 
     & .toggled .navbar-toggler-bar {
-      width: 24px;
+      width: 32px;
 
       & + .navbar-toggler-bar {
         margin-top: 5px;
@@ -190,7 +190,7 @@
     }
 
     .navbar-translate {
-      @include transform-translate-x(-300px);
+      @include transform-translate-x(-150px);
     }
 
     .menu-on-left {
@@ -199,7 +199,7 @@
       }
 
       .navbar-translate {
-        @include transform-translate-x(300px);
+        @include transform-translate-x(150px);
       }
 
       .wrapper {
@@ -208,7 +208,7 @@
 
       #bodyClick {
         right: auto;
-        left: 300px;
+        left: 150px;
       }
     }
   }
@@ -220,7 +220,7 @@
   .bar1,
   .bar2,
   .bar3 {
-    outline: 1px solid transparent;
+    outline: 2px solid transparent;
   }
   .bar1 {
     top: 0px;
